--- a/index.html
+++ b/index.html
@@ -7,39 +7,49 @@
 
 <style>
 body {
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
   background: #f2f2f7;
   padding: 20px;
 }
 .card {
-  background: white;
-  border-radius: 16px;
+  background: #fff;
+  border-radius: 14px;
   padding: 20px;
-  box-shadow: 0 4px 10px rgba(0,0,0,.1);
 }
 button {
   width: 100%;
   padding: 14px;
-  margin: 8px 0;
-  border-radius: 12px;
+  margin: 6px 0;
+  font-size: 16px;
   border: none;
+  border-radius: 10px;
   background: #007aff;
   color: white;
-  font-size: 16px;
 }
-button.correct { background:#34c759 }
-button.wrong { background:#ff3b30 }
+button.correct { background: #34c759; }
+button.wrong { background: #ff3b30; }
+button.next {
+  background: #5856d6;
+  margin-top: 12px;
+}
+#progress, #stats {
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 6px;
+}
 </style>
 </head>
 
 <body>
+
 <div class="card">
+  <div id="progress"></div>
+  <div id="stats"></div>
   <h2 id="question"></h2>
   <div id="answers"></div>
-  <small id="stats"></small>
+  <button id="nextBtn" class="next" style="display:none;">Avanti</button>
 </div>
 
-<!-- DATABASE -->
 <script src="questions_1.js"></script>
 <script src="questions_2.js"></script>
 <script src="questions_3.js"></script>
@@ -51,50 +61,82 @@ const questions = [
   ...questions_3
 ];
 
-// progressi
-const saved = JSON.parse(localStorage.getItem("pegaso-progress"));
-if (saved) saved.forEach((s,i)=>questions[i] && (questions[i].weight=s.weight));
-
-function pickQuestion(){
-  const pool=[];
-  questions.forEach((q,i)=>{for(let j=0;j<q.weight;j++)pool.push(i)});
-  return pool[Math.floor(Math.random()*pool.length)];
-}
-function shuffle(a){return a.sort(()=>Math.random()-0.5)}
+// inizializza contatori se non esistono
+questions.forEach(q => {
+  if (q.seen === undefined) q.seen = 0;
+  if (q.wrong === undefined) q.wrong = 0;
+});
 
 let current;
+let answered = false;
+let doneCount = 0;
 
-function render(){
-  current=questions[pickQuestion()];
-  document.getElementById("question").innerText=current.q;
-  const box=document.getElementById("answers");
-  box.innerHTML="";
-  shuffle([current.correct,...current.wrong]).forEach(a=>{
-    const b=document.createElement("button");
-    b.innerText=a;
-    b.onclick=()=>check(a,b);
+function shuffle(a) {
+  return a.sort(() => Math.random() - 0.5);
+}
+
+function pickQuestion() {
+  const pool = [];
+  questions.forEach((q, i) => {
+    for (let j = 0; j < q.weight; j++) pool.push(i);
+  });
+  return pool[Math.floor(Math.random() * pool.length)];
+}
+
+function render() {
+  answered = false;
+  document.getElementById("nextBtn").style.display = "none";
+
+  current = questions[pickQuestion()];
+  current.seen++;
+
+  document.getElementById("question").innerText = current.q;
+
+  document.getElementById("progress").innerText =
+    `Domanda n° ${doneCount + 1} — Totali fatte: ${doneCount}`;
+
+  document.getElementById("stats").innerText =
+    `Errori: ${current.wrong} / ${current.seen}`;
+
+  const box = document.getElementById("answers");
+  box.innerHTML = "";
+
+  shuffle([current.correct, ...current.wrong]).forEach(a => {
+    const b = document.createElement("button");
+    b.innerText = a;
+    b.onclick = () => check(a, b);
     box.appendChild(b);
   });
-  document.getElementById("stats").innerText=`Domande totali: ${questions.length}`;
 }
 
-function check(a,b){
-  document.querySelectorAll("button").forEach(x=>x.disabled=true);
-  if(a===current.correct){
-    b.classList.add("correct");
-    current.weight=Math.max(1,current.weight-1);
+function check(answer, btn) {
+  if (answered) return;
+  answered = true;
+  doneCount++;
+
+  document.querySelectorAll("button").forEach(b => b.disabled = true);
+
+  if (answer === current.correct) {
+    btn.classList.add("correct");
+    current.weight = Math.max(1, current.weight - 1);
   } else {
-    b.classList.add("wrong");
-    current.weight+=2;
-    document.querySelectorAll("button").forEach(x=>{
-      if(x.innerText===current.correct)x.classList.add("correct");
+    btn.classList.add("wrong");
+    current.wrong++;
+    current.weight += 2;
+    document.querySelectorAll("button").forEach(b => {
+      if (b.innerText === current.correct) {
+        b.classList.add("correct");
+      }
     });
   }
-  localStorage.setItem("pegaso-progress",
-    JSON.stringify(questions.map(q=>({weight:q.weight})))
-  );
-  setTimeout(render,1200);
+
+  document.getElementById("stats").innerText =
+    `Errori: ${current.wrong} / ${current.seen}`;
+
+  document.getElementById("nextBtn").style.display = "block";
 }
+
+document.getElementById("nextBtn").onclick = render;
 
 render();
 </script>
