--- a/index.html
+++ b/index.html
@@ -28,26 +28,32 @@ button {
 }
 button.correct { background: #34c759; }
 button.wrong { background: #ff3b30; }
-button.next {
-  background: #5856d6;
-  margin-top: 12px;
-}
-#progress, #stats {
+button.secondary { background: #5856d6; }
+#topbar {
+  display: flex;
+  justify-content: space-between;
   font-size: 14px;
   color: #555;
-  margin-bottom: 6px;
+  margin-bottom: 8px;
 }
+.hidden { display: none; }
 </style>
 </head>
 
 <body>
 
 <div class="card">
-  <div id="progress"></div>
-  <div id="stats"></div>
+  <div id="topbar">
+    <div id="info"></div>
+    <div id="timer"></div>
+  </div>
+
   <h2 id="question"></h2>
   <div id="answers"></div>
-  <button id="nextBtn" class="next" style="display:none;">Avanti</button>
+
+  <button id="nextBtn" class="secondary hidden">Avanti</button>
+  <button id="startExamBtn">🎯 Simulazione Test</button>
+  <button id="exitExamBtn" class="secondary hidden">⬅️ Torna allo studio</button>
 </div>
 
 <script src="questions_1.js"></script>
@@ -55,91 +61,154 @@ button.next {
 <script src="questions_3.js"></script>
 
 <script>
-const questions = [
+const ALL_QUESTIONS = [
   ...questions_1,
   ...questions_2,
   ...questions_3
 ];
 
-// inizializzazione contatori per ogni domanda
-questions.forEach(q => {
-  if (q._seen === undefined) q._seen = 0;
-  if (q._wrong === undefined) q._wrong = 0;
-});
-
+// ====== STATO ======
+let mode = "study"; // study | exam
 let current = null;
 let answered = false;
+
+// studio
 let doneCount = 0;
 
+// esame
+let examQuestions = [];
+let examIndex = 0;
+let examScore = 0;
+let timeLeft = 0;
+let timerId = null;
+
+// ====== UTILS ======
 function shuffle(arr) {
   return arr.sort(() => Math.random() - 0.5);
 }
 
-function pickQuestion() {
-  const pool = [];
-  questions.forEach((q, i) => {
-    for (let j = 0; j < q.weight; j++) pool.push(i);
-  });
-  return pool[Math.floor(Math.random() * pool.length)];
-}
-
-function render() {
-  answered = false;
-  document.getElementById("nextBtn").style.display = "none";
-
-  current = questions[pickQuestion()];
-  current._seen++;
-
-  document.getElementById("question").innerText = current.q;
-  document.getElementById("progress").innerText =
-    `Domanda n° ${doneCount + 1} — Totali fatte: ${doneCount}`;
-
-  document.getElementById("stats").innerText =
-    `Errori: ${current._wrong} / ${current._seen}`;
-
+// ====== RENDER ======
+function renderQuestion(q) {
+  document.getElementById("question").innerText = q.q;
   const box = document.getElementById("answers");
   box.innerHTML = "";
 
-  shuffle([current.correct, ...current.wrong]).forEach(ans => {
+  shuffle([q.correct, ...q.wrong]).forEach(ans => {
     const btn = document.createElement("button");
     btn.innerText = ans;
-    btn.onclick = () => checkAnswer(ans, btn);
+    btn.onclick = () => handleAnswer(ans, btn);
     box.appendChild(btn);
   });
 }
 
-function checkAnswer(answer, btn) {
+// ====== STUDIO ======
+function renderStudy() {
+  mode = "study";
+  answered = false;
+  document.getElementById("startExamBtn").classList.remove("hidden");
+  document.getElementById("exitExamBtn").classList.add("hidden");
+  document.getElementById("nextBtn").classList.add("hidden");
+  document.getElementById("timer").innerText = "";
+
+  current = ALL_QUESTIONS[Math.floor(Math.random() * ALL_QUESTIONS.length)];
+  document.getElementById("info").innerText =
+    `Studio — Domande fatte: ${doneCount}`;
+
+  renderQuestion(current);
+}
+
+// ====== ESAME ======
+function startExam() {
+  mode = "exam";
+  examScore = 0;
+  examIndex = 0;
+  timeLeft = 30 * 60; // 30 minuti
+  examQuestions = shuffle([...ALL_QUESTIONS]).slice(0, 30);
+
+  document.getElementById("startExamBtn").classList.add("hidden");
+  document.getElementById("exitExamBtn").classList.remove("hidden");
+  document.getElementById("nextBtn").classList.add("hidden");
+
+  startTimer();
+  renderExamQuestion();
+}
+
+function startTimer() {
+  updateTimer();
+  timerId = setInterval(() => {
+    timeLeft--;
+    updateTimer();
+    if (timeLeft <= 0) finishExam();
+  }, 1000);
+}
+
+function updateTimer() {
+  const min = Math.floor(timeLeft / 60);
+  const sec = timeLeft % 60;
+  document.getElementById("timer").innerText =
+    `⏱️ ${min}:${sec.toString().padStart(2, "0")}`;
+}
+
+function renderExamQuestion() {
+  answered = false;
+  current = examQuestions[examIndex];
+  document.getElementById("info").innerText =
+    `Simulazione — Domanda ${examIndex + 1} / 30`;
+
+  renderQuestion(current);
+}
+
+function finishExam() {
+  clearInterval(timerId);
+  document.getElementById("answers").innerHTML = "";
+  document.getElementById("question").innerText =
+    `✅ Test terminato\n\nPunteggio: ${examScore} / 30\nPercentuale: ${Math.round((examScore/30)*100)}%`;
+
+  document.getElementById("info").innerText = "";
+  document.getElementById("timer").innerText = "";
+  document.getElementById("nextBtn").classList.add("hidden");
+}
+
+// ====== RISPOSTA ======
+function handleAnswer(answer, btn) {
   if (answered) return;
   answered = true;
-  doneCount++;
 
   document.querySelectorAll("#answers button").forEach(b => b.disabled = true);
 
   if (answer === current.correct) {
     btn.classList.add("correct");
-    current.weight = Math.max(1, current.weight - 1);
+    if (mode === "exam") examScore++;
   } else {
     btn.classList.add("wrong");
-    current._wrong++;
-    current.weight += 2;
-
     document.querySelectorAll("#answers button").forEach(b => {
-      if (b.innerText === current.correct) {
-        b.classList.add("correct");
-      }
+      if (b.innerText === current.correct) b.classList.add("correct");
     });
   }
 
-  document.getElementById("stats").innerText =
-    `Errori: ${current._wrong} / ${current._seen}`;
-
-  document.getElementById("nextBtn").style.display = "block";
+  if (mode === "study") {
+    doneCount++;
+    document.getElementById("nextBtn").classList.remove("hidden");
+  } else {
+    setTimeout(() => {
+      examIndex++;
+      if (examIndex >= 30) finishExam();
+      else renderExamQuestion();
+    }, 800);
+  }
 }
 
-document.getElementById("nextBtn").onclick = render;
+// ====== BOTTONI ======
+document.getElementById("nextBtn").onclick = renderStudy;
+document.getElementById("startExamBtn").onclick = startExam;
+document.getElementById("exitExamBtn").onclick = () => {
+  clearInterval(timerId);
+  renderStudy();
+};
 
-// prima domanda
-render();
+// avvio
+renderStudy();
 </script>
 </body>
 </html>
+
